apps/base/wazuh/indexer_stack/wazuh-dashboard/dashboard-svc.yaml
# Copyright (C) 2019, Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Dashboard service

apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: wazuh
  labels:
    app: wazuh-dashboard
  annotations:
    io.cilium/lb-ipam-ips: 10.0.6.220
    metallb.universe.tf/loadBalancerIPs: 10.0.6.220
spec:
  type: LoadBalancer
  selector:
    app: wazuh-dashboard
  ports:
    - name: dashboard
      port: 443
      targetPort: 5601
